package com.pointwest.bootcamp.eventhubri.registration.enums;

public enum RegistrationStatus {
    CONFIRMED,
    CANCELLED,
    WAITLISTED
}
