classDiagram
    %% ==========================================
    %% USER & IDENTITY DOMAIN
    %% ==========================================
    class User {
        -userId: String
        -name: String
        -email: String
    }

    class Organizer {
        -organizerId: String
        -companyName: String
    }

    class Attendee {
        -attendeeId: String
    }

    User <|-- Organizer
    User <|-- Attendee

    %% ==========================================
    %% EVENT & AGENDA DOMAIN
    %% ==========================================
    class Event {
        -eventId: String
        -title: String
        -description: String
        -status: EventStatus
        -startDateTime: Date
        -endDateTime: Date
        -registrationOpensAt: Date
        -registrationClosesAt: Date
        -venue: String
        -capacity: Integer
        -isFoodProvided: Boolean
    }

    class Agenda {
        -agendaId: String
        -description: String
    }

    class Session {
        <<abstract>>
        -sessionId: String
        -title: String
        -description: String
        -startDateTime: Date
        -endDateTime: Date
        -location: String
    }

    class PresentationSession {
        -speaker: String
    }

    class BreakSession {
        -breakType: String
    }

    Event "1" *-- "1" Agenda : contains
    Agenda "1" *-- "*" Session : consists of
    Session <|-- PresentationSession
    Session <|-- BreakSession

    %% ==========================================
    %% ATTENDEE REGISTRATION MODULE (NEW)
    %% ==========================================
    class Registration {
        -registrationId: String
        -registeredAt: Date
        -status: RegistrationStatus
        -dietaryRestrictions: String
        +cancel()
        +updateDietaryInfo(info: String)
    }

    class SessionSelection {
        -selectionId: String
        -selectedAt: Date
    }

    class RegistrationStatus {
        <<enumeration>>
        PENDING
        CONFIRMED
        CANCELLED
        WAITLISTED
    }

    Organizer "1" --> "*" Event : manages
    Attendee "1" --> "*" Registration : creates
    Event "1" --> "*" Registration : receives
    Registration "1" *-- "*" SessionSelection : includes
    SessionSelection "*" --> "1" Session : references
    Registration --> RegistrationStatus : has

    %% ==========================================
    %% SPRING BOOT SERVICE & REPOSITORY LAYER (DIP / SRP)
    %% ==========================================
    class EventRepository {
        <<interface>>
        +findById(eventId: String): Optional~Event~
    }

    class RegistrationRepository {
        <<interface>>
        +findByEventId(eventId: String): List~Registration~
        +findByAttendeeId(attendeeId: String): List~Registration~
    }

    class RegistrationService {
        <<service>>
        +registerAttendee(attendeeId: String, eventId: String, dietaryInfo: String): Registration
        +cancelRegistration(registrationId: String): void
        +selectSessions(registrationId: String, sessionIds: List~String~): void
    }

    RegistrationService --> EventRepository : uses
    RegistrationService --> RegistrationRepository : uses